--- a/customer/templates/base.html
+++ b/customer/templates/base.html
@@ -39,7 +39,7 @@
 
 
 </div>
-<footer>Vytvořil &copy;Patrik & Peter PythonRemoteSK2  <a href="{% url 'contact' %}" class="url_contact">Contact</a></footer>
+<footer>Created by &copy;Patrik & Peter PythonRemoteSK2  <a href="{% url 'contact' %}" class="url_contact">Contact</a></footer>
 </body>
 <script>
     window.onresize = function() {
